syntax = "proto3";
option java_package = "com.rilldata.protobuf.generated";
import "sql/src/main/proto/ast.proto";
package rill.sql.v1;

// *******************************
// RPC for calling into librillsql
// *******************************

enum Dialect {
  DRUID = 0;
  DUCKDB = 1;
}

message Request {
  oneof request {
    ParseRequest parse_request = 1;
    // UnparseRequest unparse_request = 2;
    TranspileRequest transpile_request = 3;
    // ApplyRequest apply_request = 4;
  }
}

 message Response {
  oneof response {
    ParseResponse parse_response = 1;
    // UnparseResponse unparse_response = 2;
    TranspileResponse transpile_response = 3;
    // ApplyResponse apply_response = 4;
  }
  Error error = 5;
 }

message ParseRequest {
  string sql = 1;
  string catalog = 2;
}

message ParseResponse {
  SqlNodeProto ast = 1;
}

message TranspileRequest {
  string sql = 1;
  Dialect dialect = 2;
  string catalog = 3;
}

message TranspileResponse {
  string sql = 1;
}

message Error {
  string message = 1;
  string stack_trace = 2;
}
